algunos cambios con css

--- a/index.html
+++ b/index.html
@@ -2,38 +2,47 @@
 <html>
 <head>
 	<title>Grace Hopper</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<!--Titulo-->
-<h1>Grace Hopper</h1>
+	<header><!--encabezado-->
+		<h1>Grace Hopper</h1>
 <!--linea horizontal-->
-<hr>
-
+		<hr>
+	</header>
 
 <!--resumen -->
-<p><strong>Grace Murray Hopper</strong>  (Nueva York, 9 de diciembre de 1906 - Condado de Arlington, 1 de enero de 1992) fue una <a href="https://es.wikipedia.org/wiki/Cient%C3%ADfico_de_la_computaci%C3%B3n"
+<main class="biografia"><!--etiqueta que nos dice que es lo mas importante-->
+	<p><strong>Grace Murray Hopper</strong>  (Nueva York, 9 de diciembre de 1906 - Condado de Arlington, 1 de enero de 1992) fue una <a href="https://es.wikipedia.org/wiki/Cient%C3%ADfico_de_la_computaci%C3%B3n"
 	target="_blank">científica de la computación</a>  y militar estadounidense con grado de contraalmirante.</p>
 
-<p>Es pionera en el mundo de las ciencias de la computación y <mark>fue la primera programadora</mark>  que utilizó el <a href="https://es.wikipedia.org/wiki/Harvard_Mark_I" target=_blank>Mark I.</a> Entre las décadas de los 50 y 60 desarrolló el primer compilador para un lenguaje de programación así como también propició métodos de validación.</p>
-<p>En 1930 se casa con Vincent Foster Hopper, un doctor en literatura en lenguaje inglés, que durante muchos años fue presidente del departamento de inglés de la universidad de Nueva York.</p>
-<p>Al final de su carrera profesional participó en los comités de estandarización de los lenguajes de programación COBOL y FORTRAN.</p>
+	<p>Es pionera en el mundo de las ciencias de la computación y <mark>fue la primera programadora</mark>  que utilizó el <a href="https://es.wikipedia.org/wiki/Harvard_Mark_I" target=_blank>Mark I.</a> Entre las décadas de los 50 y 60 desarrolló el primer compilador para un lenguaje de programación así como también propició métodos de validación.</p>
+	<p>En 1930 se casa con Vincent Foster Hopper, un doctor en literatura en lenguaje inglés, que durante muchos años fue presidente del departamento de inglés de la universidad de Nueva York.</p>
+	<p>Al final de su carrera profesional participó en los comités de estandarización de los lenguajes de programación COBOL y FORTRAN.</p>
 <!--lista Carrera-->
-<h3>Carrera</h3>
+	<h3>Carrera</h3>
 <!--ol=comando para que enumere la lista y  ordenada-->
 <!--ul= hace la lista con viñetas(puntos)S, sin numeros-->
-<ol>
-	<li>Biografía</li><!--comando para la lista-->
-	<li>Estudios</li>
-	<li>Ingreso en la armada</li>
-	<li>Cobol</li>
-	<li>Reingreso en la armada</li>
-</ol>
+	<ol>
+		<li>Biografía</li><!--comando para la lista-->
+		<li>Estudios</li>
+		<li>Ingreso en la armada</li>
+		<li>Cobol</li>
+		<li>Reingreso en la armada</li>
+	</ol>
 
 <!--Frase-->
-<h2>Frase</h2>
-<blockquote cite="http://www.mundifrases.com/frases-de/grace-murray-hopper/">
+	<h2>Frase</h2>
+	<blockquote cite="http://www.mundifrases.com/frases-de/grace-murray-hopper/">
 	“Es más fácil pedir perdón que pedir permiso.”
-</blockquote>
+	</blockquote>
+<!--Redireccionando a la página de información-->
+
+	<a href="información.html" target="_blank">Ver más</a>
+</main>
+<!--Table-Resumen-->
+<aside class="resumen"><!--contenido de almedio-->
 	<table>
 		<thead>
 			<tr>
@@ -67,8 +76,9 @@
 			
 		</tbody>
 	</table>
+</aside>	
 
-<!--Redireccionando a la página de información-->
-<a href="información.html" target="_blank">Ver más</a>
+
+
 </body>
 </html>
